[gd_scene load_steps=10 format=3 uid="uid://efbom76jq5cd"]

[ext_resource type="FontFile" uid="uid://cyf24jpuqf6e7" path="res://assets/ui/04B_30__.TTF" id="1_wjcun"]
[ext_resource type="Script" path="res://escena/hud.gd" id="1_xd038"]
[ext_resource type="StyleBox" uid="uid://d4il8rfxsqk6u" path="res://escena/basic_button.tres" id="3_4110f"]
[ext_resource type="StyleBox" uid="uid://dnr1wgxwm5nwe" path="res://escena/hover_main_menu_buttons.tres" id="4_h6gdm"]
[ext_resource type="StyleBox" uid="uid://dnycbmsg0iiel" path="res://escena/pressed_main_menu_button.tres" id="5_1f2o6"]

[sub_resource type="LabelSettings" id="LabelSettings_du3q0"]
font = ExtResource("1_wjcun")
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_42owp"]
bg_color = Color(0.933333, 0.572549, 0, 1)
border_width_left = 1
border_width_right = 1
border_color = Color(0.807843, 0.533333, 0.0666667, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 1
expand_margin_left = 2.0
expand_margin_right = 2.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3pa1m"]
bg_color = Color(0.717647, 0.435294, 0, 1)
border_width_left = 1
border_width_right = 1
border_color = Color(0.807843, 0.533333, 0.0666667, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
expand_margin_left = 2.0
expand_margin_right = 2.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4hsmy"]
bg_color = Color(0.494118, 0.490196, 0.705882, 1)
border_width_left = 1
border_width_right = 1
border_color = Color(0.494118, 0.490196, 0.705882, 1)
border_blend = true
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[node name="Hud" type="Control"]
process_mode = 3
light_mask = 1024
visibility_layer = 1024
z_index = 5
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 8.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xd038")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 40.0
grow_horizontal = 2

[node name="Background" type="ColorRect" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
color = Color(1, 0.211765, 0, 1)

[node name="HBox" type="HBoxContainer" parent="VBoxContainer/Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Margin2" type="MarginContainer" parent="VBoxContainer/Background/HBox"]
layout_mode = 2
theme_override_constants/margin_left = 7

[node name="Score" type="Label" parent="VBoxContainer/Background/HBox/Margin2"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "Score: 0
"
label_settings = SubResource("LabelSettings_du3q0")

[node name="Space2" type="Control" parent="VBoxContainer/Background/HBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Margin" type="MarginContainer" parent="VBoxContainer/Background/HBox"]
layout_mode = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="Pause" type="Button" parent="VBoxContainer/Background/HBox/Margin"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_wjcun")
theme_override_styles/normal = SubResource("StyleBoxFlat_42owp")
theme_override_styles/hover = SubResource("StyleBoxFlat_3pa1m")
theme_override_styles/pressed = SubResource("StyleBoxFlat_4hsmy")
action_mode = 0
text = "PAUSE
"

[node name="Space3" type="Control" parent="VBoxContainer/Background/HBox"]
layout_mode = 2

[node name="PauseMenu" type="Popup" parent="."]
transparent_bg = true
canvas_cull_mask = 4294168575
initial_position = 2
size = Vector2i(164, 123)

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu"]
custom_minimum_size = Vector2(100, 100)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 1
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_wjcun")
text = "Paused"

[node name="Space2" type="Control" parent="PauseMenu/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
size_flags_horizontal = 3

[node name="Resume_button" type="Button" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_wjcun")
theme_override_styles/normal = ExtResource("3_4110f")
theme_override_styles/hover = ExtResource("4_h6gdm")
theme_override_styles/pressed = ExtResource("5_1f2o6")
text = "Resume"

[node name="Space3" type="Control" parent="PauseMenu/VBoxContainer"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
size_flags_horizontal = 3

[node name="exit_button" type="Button" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_wjcun")
theme_override_styles/normal = ExtResource("3_4110f")
theme_override_styles/hover = ExtResource("4_h6gdm")
theme_override_styles/pressed = ExtResource("5_1f2o6")
text = "Exit to menu"
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="VBoxContainer/Background/HBox/Margin/Pause" to="." method="_on_pause_pressed"]
[connection signal="pressed" from="PauseMenu/VBoxContainer/Resume_button" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="PauseMenu/VBoxContainer/exit_button" to="." method="_on_exit_button_pressed"]
